--- a/ClientWPF/MVVM/View/MainWindow.xaml
+++ b/ClientWPF/MVVM/View/MainWindow.xaml
@@ -16,9 +16,9 @@
         ResizeMode="CanResizeWithGrip"
         WindowStyle="None"
         Background="#2D2F30">
-    <Window.DataContext>
-        <viewModel:MainWindowViewModel />
-    </Window.DataContext>
+    <!--<Window.DataContext>
+        <viewModel:MainWindowViewModel/>
+    </Window.DataContext>-->
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="35" />
@@ -96,9 +96,9 @@
                     BorderBrush="#252525"
                     FontWeight="Bold"
                     Foreground="White"
-                    FontSize="16" />
+                    FontSize="16" 
+                    Command="{Binding ConnectToTheServerCommand}"/>
         </Border>
-        
         
         <StackPanel Grid.Row="3"
                     Grid.Column="0"
@@ -114,8 +114,8 @@
                      VerticalContentAlignment="Center"
                      HorizontalAlignment="Left"
                      Margin="15, 5, 0,5"
-                     Text="Username"
-                     Style="{StaticResource TextBoxLucPrKeyTheme}" />
+                     Style="{StaticResource TextBoxNicknameTheme}" 
+                     Text="{Binding UserName, UpdateSourceTrigger=PropertyChanged, Mode=OneWayToSource}"/>
         </StackPanel>
         <Grid Grid.Row="3"
               Grid.Column="1"
@@ -137,8 +137,7 @@
                      Height="55"
                      VerticalContentAlignment="Center"
                      Margin="0, 10, 0,5"
-                     Text="You just type your message into here"
-                     Style="{StaticResource TextBoxLucPrKeyTheme}" />
+                     Style="{StaticResource TextBoxSendMessageTheme}" />
             <Button Grid.Column="2" Width="35"
                     Height="35"
                     Margin="10, 5, 10, 0"
@@ -149,5 +148,10 @@
                         Grid.Column="0"
                         Content="{Binding CurrentView}">
         </ContentControl>
+        <TextBox Grid.Row="2" Grid.Column="1"
+                 Height="55"
+                 VerticalContentAlignment="Center"
+                 Margin="0, 10, 0,5"
+                 Text="{Binding Answer, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
     </Grid>
 </Window>
