--- a/ClientWPF/UserControls/MessageBoxControl.xaml
+++ b/ClientWPF/UserControls/MessageBoxControl.xaml
@@ -10,7 +10,7 @@
     <Grid Margin="0, -5">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
+            <RowDefinition Height="30" />
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0"
                     Orientation="Horizontal">
@@ -18,18 +18,29 @@
                        Text="{Binding UserName}"
                        Foreground="DarkOrange"
                        FontSize="14"
-                       Margin="5, 0"/>
+                       Margin="5, 0" />
             <TextBlock Background="Transparent"
                        Text="{Binding Time}"
                        Foreground="Gray"
-                       FontSize="14"/>
+                       FontSize="14" />
         </StackPanel>
-        
-        <TextBlock Grid.Row="1" Background="Transparent"
-                   Text="{Binding Message}"
-                   Foreground="White"
-                   FontSize="15"
-                   TextWrapping="Wrap"
-                   Margin="5, 2, 5, 0"/>
+        <StackPanel Grid.Row="1"
+                    Orientation="Horizontal">
+            <Button Visibility="{Binding ButtonVisibility}"
+                    Command="{Binding DownloadFileCommand}"
+                    Width="30"
+                    Height="30"
+                    Margin="2, -2, 0,2"
+                    Style="{StaticResource ButtonDownloadFileTheme}">
+            </Button>
+            <TextBlock Background="Transparent"
+                       Text="{Binding Message}"
+                       Foreground="{Binding ColorBrush}"
+                       FontSize="15"
+                       TextWrapping="Wrap"
+                       Margin="5, 2, 5, 0"
+                       TextAlignment="Center" />
+        </StackPanel>
+
     </Grid>
 </UserControl>
